<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <TextView
            android:id="@+id/version_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/version"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:autoLink="all"
            android:gravity="fill_horizontal"
            android:text="@string/send_me_bugs" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:text="@string/homepage" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:text="@string/email" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="2dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:text="@string/current_developers_label"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:text="@string/current_developers" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="2dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:text="@string/contributors_label"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:text="@string/contributors" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="2dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:text="@string/old_developers_label"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:text="@string/old_developers" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="2dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:text="@string/localization_contributors_label"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="6dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:text="@string/localization_contributors" />

    </LinearLayout>

</ScrollView>
